syntax = "proto3";

package cassini;

import "google/api/annotations.proto";

message CacheLocation {
  string dc = 1;
  string rack = 2;
  string url = 3;
}

message Object {
  string key = 1;
  string origin = 2;
  repeated CacheLocation locations = 3;
}

message PingRequest {}

message PingReply {
  string version = 1;
}

message GetRequest {
    string key = 1;
}

message GetReply {
  Object object = 1;
}

service Cassini {
  rpc Ping(PingRequest) returns (PingReply) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  }

  rpc Get(GetRequest) returns (GetReply) {
    option (google.api.http) = {
      get: "/v1/get/{key}"
    };
  }
}

